centjes-gen/test_resources/balance/error/to-chf/CONVERT_ERROR_INVALID_SUM.cent
currency USD 0.01
currency CHF 0.05

price 2023-12-16 USD 1000000000000000000 CHF

2023-12-15
  * assets +1.0 USD
  * income -1.0 USD
